--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,12 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0|^8.1",
+        "php": "^7.3|^8.0|^8.1|^8.2",
         "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
         "maxbanton/cwh": "^2.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0|^7.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
