--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0|^8.1|^8.2",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0",
         "phpnexus/cwh": "^2.0|^3.0"
     },
     "require-dev": {
