--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "phpnexus/cwh": "^2.0|^3.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
